fix card layout overflow

--- a/src/components/ProjectCard/style.css
+++ b/src/components/ProjectCard/style.css
@@ -8,6 +8,7 @@
   overflow: hidden;
   /* height: 325px; */
   /* width: 325px; */
+  /* padding: 10px; */
   margin: 1rem;
   /* position: relative; */
   /* box-shadow: 0 3px 6px #999, 0 3px 6px #999; */
@@ -25,7 +26,7 @@
   /* justify-content: space-between; */
   /* min-height: 700px; */
 
-  max-width: 100%;
+  /* max-width: 100%; */
   overflow: hidden;
 
 }
@@ -130,12 +131,12 @@
 
 @media screen and (max-width: 1024px) {
   .card {
-    width: 33vw;
+    /* width: 33vw; */
   }
 }
 
 @media screen and (max-width: 600px) {
   .card {
-    width: 50vw;
+    /* width: 50vw; */
   }
 }
