--- a/src/containers/Main/style.css
+++ b/src/containers/Main/style.css
@@ -3,8 +3,11 @@
     /* padding-bottom: 100px; */
     /* prevent content being covered by navbar */
     padding-top: 6rem;
+    padding-bottom: 10rem;
     /* overflow: scroll; */
 
+    flex: 1;
+    
     /* center children */
     align-content: center;
     justify-content: center;
