--- a/src/containers/Projects/style.css
+++ b/src/containers/Projects/style.css
@@ -1,5 +1,5 @@
 .project-container .header, .footer {
-  background-color: var(--color-bg); /* solid background colour so that project container doesn't visibly overflow footer */
+  /* background-color: var(--color-bg); */ /* solid background colour so that project container doesn't visibly overflow footer */
 }
 
 .project-container .header .navbar {
@@ -8,9 +8,9 @@
 
 /* grid layout */
 .project-container {
-  display: grid;
+  /* display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 2.5rem;
+  gap: 2.5rem; */
   /* overflow-y: scroll; */
 }
 
@@ -30,23 +30,23 @@
   /* border: 1px solid red; */
 
   /* min-width:0; */
-  /* overflow: auto; */
+  overflow: hidden;
   /* overflow: auto; */
   /* overflow: -moz-scrollbars-vertical; */
   /* overflow-x: scroll; */
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .project-container {
-  z-index: 1;
+  /* z-index: 1; */
 
-  flex: 1 0 auto;
-  min-width: 0;
+  /* flex: 1 0 auto; */
+  /* min-width: 0; */
 
-  min-height: 100%; /* force the project-container element not get any smaller than the window height */
+  /* min-height: 100%; */ /* force the project-container element not get any smaller than the window height */
   /* padding-top: 100px;
   padding-bottom: 100px; */
-  overflow: auto;
+  /* overflow: auto; */
 }
 
 .project-container > div {
@@ -55,14 +55,16 @@
 
 @media screen and (max-width: 1024px) {
   .project-container {
-    grid-template-columns: 1fr 1fr;
-    gap: 1.2rem;
+    /* flex: 1fr 1fr 1fr; */
+    /* flex-direction: column; */
+    /* grid-template-columns: 1fr 1fr;
+    gap: 1.2rem; */
   }
 }
 
 @media screen and (max-width: 600px) {
   .project-container {
-    grid-template-columns: 1fr;
-    gap: 1rem;
+    /* grid-template-columns: 1fr;
+    gap: 1rem; */
   }
 }
