--- a/src/index.css
+++ b/src/index.css
@@ -135,8 +135,8 @@ body {
 
 .fill-area-content
 {
-    background: rgba(0, 0, 0, .3);
-    border: 1px solid #000000;
+    /* background: rgba(0, 0, 0, .3); */
+    /* border: 1px solid #000000; */
     
     /* Needed for when the area gets squished too far and there is content that can't be displayed */
     overflow: auto; 
